Added controllers, services and tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,4 +22,7 @@ spring:
     level:
       root: INFO
       org.springframework.web: DEBUG
-      com.eeze: DEBUG
+      com.nevc: DEBUG
+
+video:
+  filepath: "uploads/"
