--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -25,4 +25,7 @@ spring:
     level:
       root: INFO
       org.springframework.web: DEBUG
-      com.eeze: DEBUG
+      com.nevc: DEBUG
+
+video:
+  filepath: "uploads/"
