--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,5 +24,9 @@ spring:
       org.springframework.web: DEBUG
       com.nevc: DEBUG
 
+registration:
+  default:
+    role: ADMIN
+
 video:
-  filepath: "uploads/"
+  publishPath: "uploads/"
