--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -27,5 +27,9 @@ spring:
       org.springframework.web: DEBUG
       com.nevc: DEBUG
 
+registration:
+  default:
+    role: ADMIN
+
 video:
-  filepath: "uploads/"
+  publishPath: "uploads/"
