--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -20,6 +20,10 @@ spring:
       properties:
         hibernate:
           dialect: org.hibernate.dialect.MySQLDialect
+    servlet:
+      multipart:
+        max-file-size: 100MB
+        max-request-size: 100MB
 
   logging:
     level:
