--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,28 +8,37 @@ spring:
   profiles:
     active: test
 
-    datasource:
-      url: ${TEST_DB_URL}
-      username: ${TEST_DB_USERNAME}
-      password: ${TEST_DB_PASSWORD}
-      driver-class-name: com.mysql.cj.jdbc.Driver
-    jpa:
+  datasource:
+    url: ${TEST_DB_URL}
+    username: ${TEST_DB_USERNAME}
+    password: ${TEST_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create-only
+    show-sql: false
+    properties:
       hibernate:
-        ddl-auto: update
-      show-sql: true
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.MySQLDialect
-    servlet:
-      multipart:
-        max-file-size: 100MB
-        max-request-size: 100MB
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: false
+        jdbc:
+          time_zone: UTC
+        temp:
+          use_jdbc_metadata_defaults: false
+
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
 
   logging:
     level:
       root: INFO
       org.springframework.web: DEBUG
       com.nevc: DEBUG
+      org.hibernate.SQL: error # Hide SQL statements
+      org.hibernate.tool.schema.internal: error
 
 registration:
   default:
